Updated HTML, CSS and JS

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StopWatch Application</title>
+    <title>Stopwatch Application</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div class="stopwatch">
+        <div class="sw-lt">
+            <h1>Stopwatch</h1>
+            <div id="display">00:00:00.00</div>
+            <div id="finalTime"><span class="ft">Final Time:</span> 00:00:00.00</div>
+            <div class="buttons">
+                <button id="startPause">Start</button>
+                <button id="stop">Stop</button>
+                <button id="reset">Reset</button>
+            </div>
+        </div>
 
+    </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
